--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "author": "Ana Paula Leão",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "dependencies": {
     "next": "^13.1.6",
+    "prettier": "^3.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
